--- a/less/blocks/marketing.less
+++ b/less/blocks/marketing.less
@@ -21,6 +21,10 @@
     & h3{
       margin-top: 15px;
     }
+    & img{
+      display: block;
+     margin: auto;
+    }
   }
   .marketing__img-wrapper{
     margin-top: 15px;
