--- a/less/blocks/promotion.less
+++ b/less/blocks/promotion.less
@@ -17,6 +17,7 @@
   .promotion {
     padding-left: 15px;
     padding-right: 15px;
+    margin-top: 80px;
     & h4 {
       margin-top: 15px;
       font-size: 14px;
@@ -27,5 +28,9 @@
   }
   .promotion__item{
     margin-bottom: 20px;
+    & img{
+      margin: auto;
+      display: block;
+    }
   }
 }
