--- a/less/blocks/sell.less
+++ b/less/blocks/sell.less
@@ -1,6 +1,7 @@
 //mobile first
 .sell {
   padding-top: 50px;
+  z-index: 0;
   & .container {
     padding-left: 35px;
     padding-right: 35px;
@@ -13,6 +14,7 @@
   font-size: 200px;
   font-weight: 900;
   line-height: 1;
+  text-align: center;
   & span {
     font-size: 60px;
     margin-left: -20px;
@@ -154,7 +156,7 @@
   }
 }
 
-@media @tablet-widths {
+@media @tablet-widths-only {
   .sell{
     padding-bottom: 60px;
     position: relative;
@@ -211,4 +213,3 @@
     padding-right: 0;
   }
 }
-
