--- a/less/style.less
+++ b/less/style.less
@@ -29,3 +29,5 @@
 @import "blocks/form.less";
 @import "blocks/slogan.less";
 @import "blocks/footer.less";
+@import "blocks/modal.less";
+@import "blocks/accordion.less";
