--- a/less/variables.less
+++ b/less/variables.less
@@ -1,5 +1,5 @@
-@tablet-widths: ~"(min-width: 768px)";
-@desktop-widths: ~"(min-width: 1150px)";
+@des-widths: ~"(min-width: 768px)";
+@tablet-widths-only: ~'(max-width: 1150px)';
 @mobile-widths-only: ~"(max-width: 767px)";
 @yellow-color: #FFE200;
 @text-color: #0d0d0d;
