--- a/less/blocks/audience.less
+++ b/less/blocks/audience.less
@@ -1,25 +1,54 @@
-.audience{
+.audience {
   padding-top: 60px;
   padding-bottom: 60px;
   width: 80%;
   margin-left: 10%;
   margin-right: 10%;
-  background-color:#EFEFEF;
-  & img{
+  background-color: #EFEFEF;
+  position: relative;
+  &:before {
+    position: absolute;
+    display: block;
+    content: 'А вот, как мы с ней работаем!';
+    bottom: -36px;
+    right: 350px;
+    color: #0D0D0D;
+    font-size: 16px;
+  }
+  &:after {
+    position: absolute;
+    display: block;
+    content: '';
+    bottom: -130px;
+    right: 510px;
+    background-image: url("/img/icons/bottom-row.svg");
+    background-size: cover;
+    width: 97px;
+    height: 80px;
+  }
+  & img {
     display: block;
     margin: auto;
     margin-bottom: 20px;
   }
 }
-.audience__title{
+
+.audience__title {
   margin: 0;
 }
+
 @media @mobile-widths-only {
-  .audience{
+  .audience {
     margin-left: 5%;
     margin-right: 5%;
     width: 90%;
     border-radius: 5px;
+    &:before {
+      display: none;
+    }
+    &:after {
+      display: none;
+    }
   }
 
 }
