--- a/less/blocks/presentation.less
+++ b/less/blocks/presentation.less
@@ -1,18 +1,19 @@
-.presentation{
+.presentation {
   padding-bottom: 80px;
   padding-top: 80px;
   position: relative;
-  &:before{
+  &:before {
     position: absolute;
     left: 10%;
     right: 10%;
     top: 0;
     bottom: 0;
-    background-color:#EFEFEF;
+    background-color: #EFEFEF;
     content: '';
     border-radius: 5px;
   }
 }
+
 .presentation__list {
   padding-top: 50px;
 }
@@ -20,9 +21,10 @@
 .presentation__img {
   opacity: .4;
 }
-.presentation__item{
+
+.presentation__item {
   position: relative;
-  &:before{
+  &:before {
     position: absolute;
     content: '';
     width: 23px;
@@ -30,61 +32,78 @@
     left: 50%;
     top: 50%;
     background: url("/img/icons/lock.svg");
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
   }
 }
-.presentation__condition{
+
+.presentation__condition {
   padding-top: 15px;
 }
+
 @media @mobile-widths-only {
-  .presentation{
+  .presentation {
     padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 30px;
-    &:before{
+    &:before {
       left: 5%;
       right: 5%;
     }
   }
-  .presentation__list{
+
+  .presentation__list {
     padding-top: 15px;
   }
-  .presentation-btn{
+
+  .presentation-btn {
     padding-left: 0;
     padding-right: 0;
     margin-bottom: 15px;
   }
-  .presentation__condition{
+
+  .presentation__condition {
     text-align: center;
     color: #7b7b7b;
     font-size: 15px;
   }
-  .personal{
+
+  .personal {
     padding-left: 15px;
     padding-right: 15px;
   }
-  .personal-aside__wrapper{
+
+  .personal-aside__wrapper {
     padding-left: 20px;
     padding-right: 20px;
     margin-top: 30px;
   }
-  .personal-aside___item{
+
+  .personal-aside___item {
     padding-bottom: 20px;
-    &:last-child{
+    &:last-child {
       padding-bottom: 35px;
     }
   }
-  .personal__btn{
+
+  .personal__btn {
     padding-left: 0;
     padding-right: 0;
     width: 100%;
     margin-top: 30px;
   }
-  .personal__phone{
+
+  .personal__phone {
     display: block;
     margin: auto;
     margin-top: 20px;
     margin-bottom: 20px;
+  }
+
+  .presentation__item {
+    & img {
+      display: block;
+      margin: auto;
+    }
   }
 }
 
