--- a/less/blocks/appeal.less
+++ b/less/blocks/appeal.less
@@ -48,3 +48,26 @@
     text-align: center;
   }
 }
+
+@media @tablet-widths-min and @tablet-widths-max{
+  .appeal {
+    margin-top: 50px;
+    padding-top: 30px;
+  }
+
+  .appeal__title {
+    margin-top: 0;
+    font-size: 25px;
+    padding-bottom: 30px;
+  }
+
+  .appeal__subtitle {
+    font-size: 14px;
+    font-weight: 900;
+    width: 60%;
+    display: block;
+    margin: auto;
+    text-align: center;
+  }
+
+}
