--- a/less/blocks/audience.less
+++ b/less/blocks/audience.less
@@ -52,3 +52,17 @@
   }
 
 }
+@media @tablet-widths-min and @tablet-widths-max {
+  .audience {
+    margin-left: 5%;
+    margin-right: 5%;
+    width: 90%;
+    border-radius: 5px;
+    &:before {
+      display: none;
+    }
+    &:after {
+      display: none;
+    }
+  }
+}
