--- a/less/blocks/care.less
+++ b/less/blocks/care.less
@@ -50,3 +50,10 @@
     padding-bottom: 30px;
   }
 }
+@media @tablet-widths-min and @tablet-widths-max {
+  .care{
+    p{
+      width: 100%;
+    }
+  }
+}
