--- a/less/blocks/control.less
+++ b/less/blocks/control.less
@@ -8,3 +8,11 @@
     padding-right: 15px;
   }
 }
+
+@media @tablet-widths-min and @tablet-widths-max {
+  .control{
+    margin-top: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
