--- a/less/blocks/essence.less
+++ b/less/blocks/essence.less
@@ -163,3 +163,14 @@
     margin-top: 15px;
   }
 }
+@media @tablet-widths-min and @tablet-widths-max {
+  .essence__qote{
+    font-size: 20px;
+    padding-right: 20px;
+    text-align: center;
+  }
+  .essence__name-wrapper{
+    margin-left: 30%;
+    margin-bottom: 30px;
+  }
+}
