--- a/less/blocks/experience.less
+++ b/less/blocks/experience.less
@@ -39,7 +39,7 @@
   padding-left: 35px;
 }
 
-@media @tablet-widths-only {
+@media @tablet-widths-min and @tablet-widths-max{
   .experience__number {
     display: none;
   }
