--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -15,3 +15,11 @@
     border-bottom: 1px solid #3c3c3c;
   };
 }
+@media @tablet-widths-min and @tablet-widths-max {
+  .page-footer {
+    margin-top: 50px;
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+}
