--- a/less/blocks/personal.less
+++ b/less/blocks/personal.less
@@ -43,3 +43,9 @@
   display: inline-block;
   margin-left: 80px;
 }
+
+@media @tablet-widths-min and @tablet-widths-max {
+  .personal__phone{
+    display: none;
+  }
+}
