--- a/less/blocks/plan.less
+++ b/less/blocks/plan.less
@@ -79,3 +79,37 @@
     margin-bottom: 0;
   }
 }
+@media @tablet-widths-min and @tablet-widths-max {
+  .plan {
+    padding-bottom: 0;
+  }
+
+  .plan__top-wrapper {
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-top: 15px;
+    margin-bottom: 10px;
+  }
+
+  .plan__suptittle {
+    font-size: 9px;
+    margin-bottom: 10px;
+  }
+
+  .plan__title {
+    font-size: 28px
+  }
+
+  .plan__subtitle {
+    margin-top: 5px;
+    padding-top: 11px;
+    font-size: 9px;
+    text-align: center;
+    font-weight: 900;
+    margin-bottom: 0;
+  }
+  .plan-btn{
+    margin-top: 150px;
+  }
+}
