--- a/less/blocks/profit.less
+++ b/less/blocks/profit.less
@@ -45,3 +45,22 @@
     display: none;
   }
 }
+
+@media @tablet-widths-min and @tablet-widths-max {
+  .profit {
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 50px;
+  }
+
+  .profit__list {
+    padding-left: 25px;
+  }
+
+  .profit__item {
+    font-size: 12px;
+  }
+  .plan__link{
+    display: none;
+  }
+}
