--- a/less/blocks/promotion.less
+++ b/less/blocks/promotion.less
@@ -34,3 +34,25 @@
     }
   }
 }
+
+@media @tablet-widths-min and @tablet-widths-max{
+  .promotion {
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-top: 80px;
+    & h4 {
+      margin-top: 15px;
+      font-size: 14px;
+    }
+    & p {
+      font-size: 12px;
+    }
+  }
+  .promotion__item{
+    margin-bottom: 20px;
+    & img{
+      margin: auto;
+      display: block;
+    }
+  }
+}
