--- a/less/blocks/sell.less
+++ b/less/blocks/sell.less
@@ -156,7 +156,7 @@
   }
 }
 
-@media @tablet-widths-only {
+@media @tablet-widths-min and @tablet-widths-max {
   .sell{
     padding-bottom: 60px;
     position: relative;
@@ -211,5 +211,11 @@
     width: 16.6%;
     padding-left: 0;
     padding-right: 0;
+  }
+  .page-header__action{
+    display: none;
+  }
+  .sell__numder-subtitle{
+    text-align: center;
   }
 }
