--- a/less/blocks/slogan.less
+++ b/less/blocks/slogan.less
@@ -11,3 +11,11 @@
   display: block;
   margin-top: 15px;
 }
+
+@media @tablet-widths-max {
+  .slogan{
+    margin-top: 50px;
+    font-weight: normal;
+    margin-bottom: 50px;
+  }
+}
