--- a/less/blocks/total-earnings.less
+++ b/less/blocks/total-earnings.less
@@ -64,7 +64,7 @@
     max-width: 80%;
   }
 }
-@media @tablet-widths-only {
+@media @tablet-widths-min and @tablet-widths-max {
   .total-earnings__numbets{
     font-size: 100px;
   }
