--- a/less/variables.less
+++ b/less/variables.less
@@ -1,5 +1,6 @@
-@des-widths: ~"(min-width: 768px)";
-@tablet-widths-only: ~'(max-width: 1150px)';
+@des-widths-min: ~"(min-width: 1151px)";
+@tablet-widths-max: ~'(max-width: 1150px)';
+@tablet-widths-min: ~'(min-width: 768px)';
 @mobile-widths-only: ~"(max-width: 767px)";
 @yellow-color: #FFE200;
 @text-color: #0d0d0d;
