--- a/css/style.css
+++ b/css/style.css
@@ -869,7 +869,8 @@ button {
   box-sizing: border-box;
   top: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(255, 255, 255, 0.8);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
   z-index: 300;
   width: 100%;
   padding-top: 0;
@@ -882,6 +883,14 @@ button {
 }
 .fixed .fixed-container {
   margin: auto;
+}
+.fixed .navbar-toggler:before {
+  background-color: #000;
+  box-shadow: 0 6px 0 0 #000, 0 12px 0 0 #000;
+}
+.fixed .main-nav__link {
+  color: #0D0D0D;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
 }
 .main-nav__link {
   font-weight: bold;
@@ -1942,6 +1951,142 @@ button {
   border-bottom: 1px solid rgba(0, 0, 0, 0.3);
 }
 @media (min-width: 768px) and (max-width: 1150px) {
+  .big-number {
+    text-align: center;
+  }
+  .bottom-line--big-number:before {
+    width: 50%;
+    left: 25%;
+  }
+  .chains-stores::before {
+    height: 90%;
+  }
+  h2 {
+    font-family: "Exo-2", sans-serif;
+    font-size: 19px;
+    font-weight: 900;
+    font-style: italic;
+    line-height: 1;
+  }
+  h3 {
+    font-family: "Exo-2", sans-serif;
+    font-size: 19px;
+    font-weight: bold;
+    font-style: italic;
+    font-stretch: normal;
+    line-height: 1;
+    letter-spacing: normal;
+    text-align: left;
+    color: #0d0d0d;
+  }
+  li {
+    font-size: 12px;
+  }
+  li:before {
+    top: 5px;
+    width: 10px;
+    height: 10px;
+  }
+  p {
+    font-family: 'Arial', sans-serif;
+    font-size: 12px;
+    line-height: 1.5;
+    text-align: left;
+    color: #0d0d0d;
+    padding-top: 15px;
+  }
+  .pt-md-30 {
+    padding-top: 30px;
+  }
+  .pt-md-15 {
+    padding-top: 15px;
+  }
+  .pl-md-15 {
+    padding-left: 15px;
+  }
+  .pl-md-30 {
+    padding-left: 30px;
+  }
+  .pr-md-15 {
+    padding-right: 15px;
+  }
+  .pr-md-30 {
+    padding-right: 30px;
+  }
+  .pb-md-15 {
+    padding-bottom: 15px;
+  }
+  .pb-md-30 {
+    padding-bottom: 30px;
+  }
+  .mt-md-30 {
+    padding-top: 30px;
+  }
+  .mt-md-15 {
+    padding-top: 15px;
+  }
+  .ml-md-15 {
+    margin-left: 15px;
+  }
+  .ml-md-30 {
+    margin-left: 30px;
+  }
+  .mb-md-30 {
+    margin-bottom: 30px;
+  }
+  .mb-md-15 {
+    margin-bottom: 15px;
+  }
+  .mr-md-30 {
+    margin-right: 30px;
+  }
+  .mr-md-15 {
+    margin-right: 15px;
+  }
+  .bottom-line {
+    position: relative;
+    padding-bottom: 10px;
+    line-height: 1;
+  }
+  .bottom-line:before {
+    width: 130px;
+    height: 2px;
+    bottom: 0px;
+  }
+  .bottom-line--big-number:before {
+    width: 187px;
+    left: 30px;
+  }
+  .subtitle {
+    padding-top: 15px;
+    font-family: 'Arial', sans-serif;
+    font-size: 12px;
+    line-height: 1.5;
+    text-align: left;
+    color: #0d0d0d;
+    padding-bottom: 15px;
+  }
+  .big-number {
+    font-size: 87px;
+    text-align: center;
+    padding-left: 10px;
+  }
+  .sm-text-black {
+    color: #0d0d0d;
+    font-size: 12px;
+  }
+  .left-square {
+    padding-left: 25px;
+  }
+  .left-square:before {
+    top: 3px;
+    left: 0px;
+    width: 14px;
+    height: 14px;
+  }
+  .page-header {
+    padding-top: 50px;
+  }
   .page-header-title {
     font-size: 45px;
   }
@@ -1954,6 +2099,44 @@ button {
   .page-header__description {
     font-size: 19px;
   }
+  .page-header__logo {
+    width: 80%;
+  }
+  .navbar-toggler {
+    border: none;
+    padding: 0;
+    box-shadow: none;
+    width: 50px;
+    position: relative;
+  }
+  .navbar-toggler:before {
+    content: "";
+    position: absolute;
+    right: 14px;
+    top: 12px;
+    width: 20px;
+    height: 2px;
+    background-color: #fff;
+    box-shadow: 0 6px 0 0 #fff, 0 12px 0 0 #fff;
+  }
+  .main-nav__link {
+    text-align: center;
+  }
+  .experience__number {
+    display: none;
+  }
+  .experience__text {
+    display: none;
+  }
+  .experience__phone-wrapper {
+    display: none;
+  }
+  .experience {
+    margin-top: 30px;
+  }
+  .total-earnings__numbets {
+    font-size: 100px;
+  }
   .format__list img {
     display: block;
     margin: auto;
@@ -1965,8 +2148,360 @@ button {
   .format-number-subtitle {
     text-align: center;
   }
+  .format-item__subtitle {
+    font-size: 15px;
+  }
   .format-item__btn {
     font-size: 15px;
+  }
+  .chains-stores__top {
+    padding-bottom: 30px;
+  }
+  .essence__qote {
+    font-size: 20px;
+    padding-right: 20px;
+    text-align: center;
+  }
+  .essence__name-wrapper {
+    margin-left: 30%;
+    margin-bottom: 30px;
+  }
+  .sell {
+    padding-bottom: 60px;
+    position: relative;
+  }
+  .sell .container {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .sell .container:before {
+    position: absolute;
+    display: block;
+    top: 50px;
+    bottom: 0;
+    content: '';
+    left: 5%;
+    width: 90%;
+    background-color: #efefef;
+    border-radius: 5px;
+    box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.16);
+    z-index: -1;
+  }
+  .sell-footer {
+    margin-top: 20px;
+    z-index: 5;
+    position: relative;
+    padding-bottom: 20px;
+  }
+  .sell-footer:before {
+    width: 110%;
+    left: -5%;
+    top: 0;
+    bottom: 0;
+    position: absolute;
+    content: '';
+    display: block;
+    background-color: #f5f5f5;
+  }
+  .sell__right-col {
+    padding-left: 60px;
+  }
+  .sell-footer__list {
+    padding-top: 0;
+  }
+  .sell-footer__list {
+    padding-left: 60px;
+  }
+  .sell-footer-item {
+    padding-top: 5px;
+    width: 16.6%;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .page-header__action {
+    display: none;
+  }
+  .sell__numder-subtitle {
+    text-align: center;
+  }
+  .care p {
+    width: 100%;
+  }
+  .get-asside__yellow::after {
+    background-size: cover;
+    height: 250px;
+  }
+  .get-asside__yellow {
+    padding-top: 150px;
+  }
+  .get-asside__yellow h3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .get-asside__yellow .get-asside__yellow-description {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .get-asside__yellow .get-asside__yellow-description:before {
+    left: 22%;
+  }
+  .get-asside__yellow .get-asside__yellow-description:after {
+    left: 22%;
+  }
+  .get__button {
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .installation {
+    padding-top: 30px;
+  }
+  .installation:before {
+    left: 5%;
+    right: 5%;
+    width: 90%;
+  }
+  .installation-top {
+    padding-bottom: 0;
+  }
+  .installation-top__left-col {
+    padding-right: 38px;
+    padding-left: 38px;
+  }
+  .installation-top__left-col:before {
+    display: none;
+  }
+  .installation-top__left-col:after {
+    border: none;
+    display: none;
+  }
+  .installation-top__left-col h3 {
+    color: #fff;
+    font-size: 19px;
+    text-align: center;
+  }
+  .installation-top__left-col p {
+    color: #fff;
+    text-align: center;
+  }
+  .installation-top__right-col {
+    padding-right: 35px;
+    padding-left: 35px;
+  }
+  .installation-top__right-col h3 {
+    text-align: center;
+    font-size: 29px;
+  }
+  .installation-bottom {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .installation-bottom h4 {
+    margin-left: 15px;
+    margin-right: 15px;
+    text-align: center;
+    padding-bottom: 20px;
+    margin-bottom: 0;
+  }
+  .installation__list {
+    padding-bottom: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  }
+  .installation__learn-more {
+    margin-left: 35px;
+  }
+  .installation__btn {
+    margin-left: 40px;
+  }
+  .presentation {
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 30px;
+  }
+  .presentation:before {
+    left: 5%;
+    right: 5%;
+  }
+  .presentation__list {
+    padding-top: 15px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .presentation-btn {
+    padding-left: 0;
+    padding-right: 0;
+    margin-bottom: 15px;
+  }
+  .presentation__condition {
+    text-align: center;
+    color: #7b7b7b;
+    font-size: 15px;
+  }
+  .personal {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .personal-aside__wrapper {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 30px;
+  }
+  .personal-aside___item {
+    padding-bottom: 20px;
+  }
+  .personal-aside___item:last-child {
+    padding-bottom: 35px;
+  }
+  .personal__btn {
+    padding-left: 0;
+    padding-right: 0;
+    width: 100%;
+    margin-top: 30px;
+  }
+  .personal__phone {
+    display: block;
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  .presentation__item img {
+    display: block;
+    margin: auto;
+  }
+  .personal__phone {
+    display: none;
+  }
+  .data-base {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 0;
+  }
+  .data-base__number {
+    font-size: 70px;
+  }
+  .data-base__description {
+    font-size: 12px;
+    margin-bottom: 20px;
+  }
+  .data-base__item:nth-child(2n) {
+    padding-left: 5px;
+  }
+  .data-base__item:nth-child(2n-1) {
+    padding-right: 5px;
+  }
+  .audience {
+    margin-left: 5%;
+    margin-right: 5%;
+    width: 90%;
+    border-radius: 5px;
+  }
+  .audience:before {
+    display: none;
+  }
+  .audience:after {
+    display: none;
+  }
+  .plan {
+    padding-bottom: 0;
+  }
+  .plan__top-wrapper {
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-top: 15px;
+    margin-bottom: 10px;
+  }
+  .plan__suptittle {
+    font-size: 9px;
+    margin-bottom: 10px;
+  }
+  .plan__title {
+    font-size: 28px;
+  }
+  .plan__subtitle {
+    margin-top: 5px;
+    padding-top: 11px;
+    font-size: 9px;
+    text-align: center;
+    font-weight: 900;
+    margin-bottom: 0;
+  }
+  .plan-btn {
+    margin-top: 150px;
+  }
+  .promotion {
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-top: 80px;
+  }
+  .promotion h4 {
+    margin-top: 15px;
+    font-size: 14px;
+  }
+  .promotion p {
+    font-size: 12px;
+  }
+  .promotion__item {
+    margin-bottom: 20px;
+  }
+  .promotion__item img {
+    margin: auto;
+    display: block;
+  }
+  .control {
+    margin-top: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .profit {
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 50px;
+  }
+  .profit__list {
+    padding-left: 25px;
+  }
+  .profit__item {
+    font-size: 12px;
+  }
+  .plan__link {
+    display: none;
+  }
+  .appeal {
+    margin-top: 50px;
+    padding-top: 30px;
+  }
+  .appeal__title {
+    margin-top: 0;
+    font-size: 25px;
+    padding-bottom: 30px;
+  }
+  .appeal__subtitle {
+    font-size: 14px;
+    font-weight: 900;
+    width: 60%;
+    display: block;
+    margin: auto;
+    text-align: center;
+  }
+  .form {
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 50px;
+  }
+  .form-control {
+    padding: 10px 30px;
+  }
+  .form__description {
+    margin-top: 0;
+  }
+  .page-footer {
+    margin-top: 50px;
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 }
 @media (max-width: 767px) {
@@ -2420,6 +2955,7 @@ button {
   }
   .installation-top__left-col p {
     color: #fff;
+    text-align: center;
   }
   .installation-top__right-col {
     padding-right: 35px;
@@ -2449,48 +2985,6 @@ button {
   }
   .installation__btn {
     margin: 0;
-  }
-  .technologies {
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-bottom: 50px;
-  }
-  .technologies-aside__title {
-    font-size: 18px;
-  }
-  .technologies-aside__subtitle {
-    font-weight: bold;
-    padding-right: 15px;
-    font-size: 18px;
-  }
-  .technologies__screen-description {
-    padding-top: 30px;
-  }
-  .technologies__screen-link {
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-  }
-  .technologies__screen-link-description {
-    font-size: 12px;
-  }
-  .technologies__screen-link-description span {
-    font-weight: normal;
-  }
-  .technologies__screen-description {
-    font-size: 12px;
-  }
-  .technologies__bottom {
-    padding-top: 10px;
-  }
-  .technologies__bottom-title {
-    font-size: 15px;
-  }
-  .technologies__bottom-description {
-    font-size: 12px;
-    padding-top: 5px;
-  }
-  .technolodies__bottom-item {
-    margin-bottom: 10px;
   }
   .presentation {
     padding-left: 15px;
@@ -2692,71 +3186,51 @@ button {
   }
 }
 @media (max-width: 1150px) {
-  .experience__number {
-    display: none;
-  }
-  .experience__text {
-    display: none;
-  }
-  .experience__phone-wrapper {
-    display: none;
-  }
-  .experience {
-    margin-top: 30px;
-  }
-  .total-earnings__numbets {
-    font-size: 100px;
-  }
-  .sell {
-    padding-bottom: 60px;
-    position: relative;
-  }
-  .sell .container {
+  .technologies {
     padding-left: 15px;
     padding-right: 15px;
+    padding-bottom: 50px;
   }
-  .sell .container:before {
-    position: absolute;
-    display: block;
-    top: 50px;
-    bottom: 0;
-    content: '';
-    left: 5%;
-    width: 90%;
-    background-color: #efefef;
-    border-radius: 5px;
-    box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.16);
-    z-index: -1;
+  .technologies-aside__title {
+    font-size: 18px;
   }
-  .sell-footer {
-    margin-top: 20px;
-    z-index: 5;
-    position: relative;
-    padding-bottom: 20px;
+  .technologies-aside__subtitle {
+    font-weight: bold;
+    padding-right: 15px;
+    font-size: 18px;
   }
-  .sell-footer:before {
-    width: 110%;
-    left: -5%;
-    top: 0;
-    bottom: 0;
-    position: absolute;
-    content: '';
-    display: block;
-    background-color: #f5f5f5;
+  .technologies__screen-description {
+    padding-top: 30px;
   }
-  .sell__right-col {
-    padding-left: 60px;
+  .technologies__screen-link {
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
   }
-  .sell-footer__list {
-    padding-top: 0;
+  .technologies__screen-link-description {
+    font-size: 12px;
   }
-  .sell-footer__list {
-    padding-left: 60px;
+  .technologies__screen-link-description span {
+    font-weight: normal;
   }
-  .sell-footer-item {
+  .technologies__screen-description {
+    font-size: 12px;
+  }
+  .technologies__bottom {
+    padding-top: 10px;
+  }
+  .technologies__bottom-title {
+    font-size: 15px;
+  }
+  .technologies__bottom-description {
+    font-size: 12px;
     padding-top: 5px;
-    width: 16.6%;
-    padding-left: 0;
-    padding-right: 0;
+  }
+  .technolodies__bottom-item {
+    margin-bottom: 10px;
+  }
+  .slogan {
+    margin-top: 50px;
+    font-weight: normal;
+    margin-bottom: 50px;
   }
 }
