--- a/less/blocks/form.less
+++ b/less/blocks/form.less
@@ -32,3 +32,17 @@
     margin-top: 20px;
   }
 }
+
+@media @tablet-widths-min and @tablet-widths-max {
+  .form{
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 50px;
+  }
+  .form-control {
+    padding: 10px 30px;
+  }
+  .form__description{
+    margin-top: 0;
+  }
+}
