--- a/less/blocks/format.less
+++ b/less/blocks/format.less
@@ -96,7 +96,7 @@
     text-align: center;
   }
 }
-@media (min-width: 768px) and @tablet-widths-only{
+@media @tablet-widths-min and @tablet-widths-max{
   .format__list{
     & img{
       display: block;
@@ -109,6 +109,9 @@
   }
   .format-number-subtitle{
     text-align: center;
+  }
+  .format-item__subtitle{
+    font-size: 15px;
   }
   .format-item__btn{
     font-size: 15px;
