--- a/less/blocks/header.less
+++ b/less/blocks/header.less
@@ -128,7 +128,8 @@
   box-sizing: border-box;
   top: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, .7);
+  background-color: rgba(255, 255, 255, .8);
+  border-bottom: 1px solid rgba(0, 0, 0, .3);
   z-index: 300;
   width: 100%;
   padding-top: 0;
@@ -141,6 +142,16 @@
 
   & .fixed-container {
     margin: auto;
+  }
+  .navbar-toggler{
+    &:before {
+      background-color: #000;
+      box-shadow: 0 6px 0 0 #000, 0 12px 0 0 #000;
+    }
+  }
+  .main-nav__link{
+    color: #0D0D0D;
+    border-bottom: 1px solid rgba(0, 0, 0, .3);
   }
 }
 
@@ -204,7 +215,11 @@
   }
 }
 
-@media (min-width: 768px) and @tablet-widths-only {
+@media @tablet-widths-min and @tablet-widths-max {
+  .page-header{
+    padding-top: 50px;
+  }
+
   .page-header-title {
     font-size: 45px;
   }
@@ -219,5 +234,8 @@
 
   .page-header__description {
     font-size: 19px;
+  }
+  .page-header__logo {
+    width: 80%;
   }
 }
