--- a/less/blocks/technologies.less
+++ b/less/blocks/technologies.less
@@ -78,7 +78,7 @@
   line-height: 1.5;
   text-align: left;
 }
-@media @mobile-widths-only {
+@media @tablet-widths-max {
   .technologies{
     padding-left: 15px;
     padding-right: 15px;
