--- a/less/global/base.less
+++ b/less/global/base.less
@@ -465,3 +465,171 @@ button {
     }
   }
 }
+
+@media @tablet-widths-min and @tablet-widths-max {
+  .big-number {
+    text-align: center;
+  }
+
+  .bottom-line--big-number {
+    &:before {
+      width: 50%;
+      left: 25%;
+    }
+  }
+
+  .chains-stores::before {
+    height: 90%;
+  }
+
+  h2 {
+    font-family: @exo;
+    font-size: 19px;
+    font-weight: 900;
+    font-style: italic;
+    line-height: 1;
+  }
+
+  h3 {
+    font-family: @exo;
+    font-size: 19px;
+    font-weight: bold;
+    font-style: italic;
+    font-stretch: normal;
+    line-height: 1;
+    letter-spacing: normal;
+    text-align: left;
+    color: #0d0d0d;
+  }
+
+  li {
+    font-size: 12px;
+    &:before {
+      top: 5px;
+      width: 10px;
+      height: 10px;
+    }
+  }
+
+  p {
+    font-family: @arial;
+    font-size: 12px;
+    line-height: 1.5;
+    text-align: left;
+    color: #0d0d0d;
+    padding-top: 15px;
+  }
+
+  .pt-md-30 {
+    padding-top: 30px;
+  }
+
+  .pt-md-15 {
+    padding-top: 15px;
+  }
+
+  .pl-md-15 {
+    padding-left: 15px;
+  }
+
+  .pl-md-30 {
+    padding-left: 30px;
+  }
+
+  .pr-md-15 {
+    padding-right: 15px;
+  }
+
+  .pr-md-30 {
+    padding-right: 30px;
+  }
+
+  .pb-md-15 {
+    padding-bottom: 15px;
+  }
+
+  .pb-md-30 {
+    padding-bottom: 30px;
+  }
+
+  .mt-md-30 {
+    padding-top: 30px;
+  }
+
+  .mt-md-15 {
+    padding-top: 15px;
+  }
+
+  .ml-md-15 {
+    margin-left: 15px;
+  }
+
+  .ml-md-30 {
+    margin-left: 30px;
+  }
+
+  .mb-md-30 {
+    margin-bottom: 30px;
+  }
+
+  .mb-md-15 {
+    margin-bottom: 15px;
+  }
+
+  .mr-md-30 {
+    margin-right: 30px;
+  }
+
+  .mr-md-15 {
+    margin-right: 15px;
+  }
+
+  .bottom-line {
+    position: relative;
+    padding-bottom: 10px;
+    line-height: 1;
+    &:before {
+      width: 130px;
+      height: 2px;
+      bottom: 0px;
+    }
+    &--big-number:before {
+      width: 187px;
+      left: 30px;
+    }
+  }
+
+  .subtitle {
+    padding-top: 15px;
+    font-family: @arial;
+    font-size: 12px;
+    line-height: 1.5;
+    text-align: left;
+    color: #0d0d0d;
+    padding-bottom: 15px;
+  }
+
+  .big-number {
+    font-size: 87px;
+    text-align: center;
+    padding-left: 10px;
+  }
+
+  .sm-text-black {
+    color: #0d0d0d;
+    font-size: 12px;
+  }
+
+
+  .left-square {
+    padding-left: 25px;
+    &:before {
+      top: 3px;
+      left: 0px;
+      width: 14px;
+      height: 14px;
+
+    }
+  }
+
+}
