--- a/less/blocks/header.less
+++ b/less/blocks/header.less
@@ -1,18 +1,17 @@
 .page-header {
   background: url("/img/header-bg.jpg");
-  padding-top: 86px;
-  margin-bottom: 90px;
-  margin-left: 5%;
-  margin-right: 5%;
+  padding-top: 71px;
+  margin-left: 3%;
+  margin-right: 3%;
   border-radius: 5px;
   position: relative;
   background-size: cover;
-  margin-top: 50px;
+  margin-top: 42px;
 }
 
 .page-header-title {
   font-size: 63px;
-  font-family: "Panton", "Arial", sans-serif;;
+  font-family: "Panton", sans-serif;;
   font-weight: 900;
   font-style: italic;
 }
@@ -32,12 +31,12 @@
 }
 
 .page-header__intro {
-  font-family: "Exo 2", "Arial", sans-serif;
+  font-family: @exo;
   padding-top: 45px;
 }
 
 .page-header__title-wrapper {
-  font-family: "Exo 2", "Arial", sans-serif;
+  font-family: "Exo 2", sans-serif;
   width: 80%;
   position: relative;
   z-index: 2;
@@ -74,12 +73,12 @@
   line-height: 1.2;
   color: #fff;
   padding-top: 30px;
-  width: 92%;
-  font-family: "Exo 2", "Arial", sans-serif;
+  width: 82%;
+  font-family: @exo;
 }
 
 .page-header__description {
-  font-family: "Exo 2", "Arial", sans-serif;
+  font-family: @exo;
   font-size: 25px;
   font-weight: 300;
   font-style: italic;
@@ -87,23 +86,26 @@
   text-align: left;
   color: #ffffff;
   width: 92%;
+  padding-top: 28px;
 }
 
 .page-header-bottom {
   padding-top: 40px;
+  padding-bottom: 20px;
 }
 
 .page-header-bottom__item {
-  font-family: "Exo 2", "Arial", sans-serif;
+  font-family: @exo;
   font-weight: bold;
   font-style: italic;
   position: relative;
-  padding-top: 16px;
+  padding-top: 10px;
   padding-bottom: 16px;
+  font-size: 19px;
   color: #fff;
   text-align: center;
   border-left: 1px solid @yellow-color;
-
+  line-height: 1.2;
   &:first-child {
     border-left: none;
     text-align: left;
@@ -180,7 +182,7 @@
 
   .page-header-title {
     font-size: 24px;
-    font-family: "Panton", "Arial", sans-serif;;
+    font-family: "Panton", sans-serif;;
     font-weight: 900;
     font-style: italic;
   }
