--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -17,8 +17,8 @@
   border-bottom: none;
 }
 
-
 .navbar{
+  padding: 0;
   width: 100%;
 }
 .collapse{
@@ -26,7 +26,9 @@
 }
 
 .main-nav__item {
-  padding: .5rem 1rem;
+  padding-top: 0;
+  padding-left: 31px;
+  padding-right: 0;
   &:before {
     display: none;
   }
