--- a/less/blocks/personal.less
+++ b/less/blocks/personal.less
@@ -25,10 +25,11 @@
     width: 27px;
     height: 32px;
     line-height: 1.19;
+    left: -27px;
     letter-spacing: normal;
     text-align: left;
-    color: #ffe200;
     background: url("/img/icons/question-button.svg");
+    background-size: cover;
   }
 }
 
