--- a/less/global/base.less
+++ b/less/global/base.less
@@ -194,9 +194,13 @@ p {
     bottom: 0;
     border-radius: 50px;
   }
-  &--header:before {
-    width: 389.5px;
+  &--header {
+    padding-bottom: 24px;
+    &:before {
+      width: 389.5px;
+    }
   }
+
   &--big-number:before {
     left: 15px;
   }
