--- a/less/global/fonts.less
+++ b/less/global/fonts.less
@@ -10,8 +10,9 @@
   font-family: 'Exo-2';
   font-style: normal;
   font-weight: 400;
-  src: local("Exo-2"),
-  local("Exo2"),
+  src:
+  //  local("Exo-2"),
+  //local("Exo2"),
   url("/fonts/Exo2.0-Regular.otf?") format("embedded-opentype"),
   url("/fonts/ttf/Exo2-Regular.ttf") format("truetype");
 }
@@ -20,8 +21,9 @@
   font-family: 'Exo-2';
   font-style: italic;
   font-weight: 400;
-  src: local("Exo-2"),
-  local("Exo2"),
+  src:
+  //  local("Exo-2"),
+  //local("Exo2"),
   url("/fonts/Exo2.0-Italic.otf?") format("embedded-opentype"),
   url("/fonts/ttf/Exo2-Italic.ttf") format("truetype");
 }
@@ -30,8 +32,9 @@
   font-family: 'Exo-2';
   font-style: normal;
   font-weight: 700;
-  src: local("Exo-2 Bold"),
-  local("Exo2-Bold"),
+  src:
+  //  local("Exo-2 Bold"),
+  //local("Exo2-Bold"),
   url("/fonts/Exo2.0-Bold.otf?") format("embedded-opentype"),
   url("/fonts/ttf/Exo2-Bold.ttf") format("truetype");
 }
@@ -40,8 +43,9 @@
   font-family: 'Exo-2';
   font-style: italic;
   font-weight: 700;
-  src: local("Exo-2 Bold Italic"),
-  local("Exo2-Bold-Italic"),
+  src:
+  //  local("Exo-2 Bold Italic"),
+  //local("Exo2-Bold-Italic"),
   url("/fonts/Exo2.0-BoldItalic.otf?") format("embedded-opentype"),
   url("/fonts/ttf/Exo2-BoldItalic.ttf") format("truetype");
 }
@@ -50,8 +54,9 @@
   font-family: 'Exo-2';
   font-style: italic;
   font-weight: 300;
-  src: local("Exo-2 Medium Italic"),
-  local("Exo2-Medium-Italic"),
+  src:
+  //  local("Exo-2 Medium Italic"),
+  //local("Exo2-Medium-Italic"),
   url("/fonts/Exo2.0-MediumItalic.otf?") format("embedded-opentype"),
   url("/fonts/ttf/Exo2-MediumItalic.ttf") format("truetype");
 }
@@ -60,8 +65,9 @@
   font-family: 'Exo-2';
   font-style: normal;
   font-weight: 300;
-  src: local("Exo-2 Medium "),
-  local("Exo2-Medium"),
+  src:
+    //local("Exo-2 Medium "),
+  //local("Exo2-Medium"),
   url("/fonts/Exo2.0-Medium.otf?") format("embedded-opentype"),
   url("/fonts/ttf/Exo2-Medium.ttf") format("truetype");
 }
@@ -70,8 +76,9 @@
   font-family: 'Exo-2';
   font-style: italic;
   font-weight: 900;
-  src: local("Exo-2 Black Italic"),
-  local("Exo2-Medium-Italic"),
+  src:
+  //  local("Exo-2 Black Italic"),
+  //local("Exo2-Medium-Italic"),
     //url("/fonts/Exo2.0-MediumItalic.otf?") format("embedded-opentype"),
   url("/fonts/ttf/Exo2-BlackItalic.ttf") format("truetype");
 }
@@ -80,8 +87,9 @@
   font-family: 'Exo-2';
   font-style: normal;
   font-weight: 900;
-  src: local("Exo-2 Black "),
-  local("Exo2-Black"),
+  src:
+    //local("Exo-2 Black "),
+  //local("Exo2-Black"),
     //url("/fonts/Exo2.0-Medium.otf?") format("embedded-opentype"),
   url("/fonts/ttf/Exo2-Black.ttf") format("truetype");
 }
@@ -91,7 +99,7 @@
   font-style: italic;
   font-weight: 900;
   src: local("Panton Black Italic"),
-  local("Panton-Black-Italic"),
+  //local("Panton-Black-Italic"),
   url("/fonts/Panton-BlackItalic.otf?") format("embedded-opentype");
 }
 
